@@ -11,7 +11,7 @@ BaseRealPath = "/home/stuart/documents/CFCF/bumblebee/"
 
 [error_handling]
 ; set these to 0 for production systems, 1 for development/debugging
-VerboseSQL = 1
+VerboseSQL = 0
 AllWarnings = 1
 VerboseData = 0
 
