@@ -1,4 +1,4 @@
-<?
+<?php
 # $Id$
 # database connection scripts
 
