@@ -1,13 +1,18 @@
-<?
+<?php
   # $Id$
-  # Header HTML for the page
+  # Content heading, branding etc
+  
+  // You can customise the menu system here or in pageheader.php
+  
+  $MENUCONTENTS = $usermenu->getMenu();
+  
 ?>
 <body>
 
 <div id="header">
   <div id="headerLeft">
     <a href='http://www.pfpc.unimelb.edu.au/' title="PFPC">
-      <img src='<?=$BASEPATH?>/theme/images/pfpc.png' alt="PFPC logo" />
+      <img src='<?php echo $BASEPATH ?>/theme/images/pfpc.png' alt="PFPC logo" />
     </a>
   </div>
   <div id="headerRight">
@@ -15,3 +20,6 @@
   </div>
 </div>
 
+<div id='fmenu'>
+  <?php echo $MENUCONTENTS ?>
+</div>
