@@ -1,4 +1,4 @@
-<?
+<?php
   # $Id$
   # Footer HTML to be included on every page
 
